<resources>
    <string name="app_name">MobileSecurity</string>
    <string name="version_name">版本:</string>
    <string name="next_time_update">下次再说</string>
    <string name="update_now">立刻更新</string>
    <string name="check_new_version">检测到新版本</string>
    <string name="deny_perm">您拒绝了权限</string>
    <string name="error_104">Error:104</string>
    <string name="error_103">Error:103</string>
    <string name="error_101">Error:101</string>
    <string name="error_102">Error:102</string>
    <string name="title_safe">黑马手机安全卫士</string>
    <string name="content_safe">黑马手机安全卫士,时刻保护您的手机安全，http://www.itheima.com</string>
    <string name="setting_title">设置中心</string>
    <string name="init_sjfd_pwd">初始化密码设置</string>
    <string name="input_pwd">输入密码</string>
    <string name="enter_pwd">确认密码</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="p_input_pwd">请输入密码</string>
    <string name="p_input_confirm_pwd">请输入确认密码</string>
    <string name="pwd_not_same">两次密码不一致</string>
    <string name="check_sjfd_pwd">密码验证</string>
    <string name="error_pwd">输入密码不正确</string>
    <string name="sjfd_setup_title_1">1.欢迎使用手机防盗</string>
    <string name="sjdf_setup_text_1">您的手机防盗卫士:</string>
    <string name="sjdf_setup_sim_text">SIM卡变更报警</string>
    <string name="sjfd_setup_gps_text">GPS追踪</string>
    <string name="sjfd_setup_remote_lock_text">远程锁屏</string>
    <string name="sjfd_setup_remote_distory_text">远程销毁数据</string>
    <string name="tv_next">下一步</string>

    <string name="sample_device_admin_description">手机防盗描述内容</string>
    <string name="sample_device_admin">手机防盗</string>
    <string name="add_admin_extra_app_text">开启手机防盗保护的描述</string>
</resources>
