<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title_background"
        android:drawableLeft="@mipmap/dialog_title_default_icon"
        android:drawablePadding="2dp"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/init_sjfd_pwd" />

    <EditText
        android:id="@+id/dialog_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/input_pwd"
        android:password="true"
        android:singleLine="true" />

    <EditText
        android:id="@+id/dialog_et_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_pwd"
        android:password="true"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_ok"
            style="@style/BtnOkNormal"
            android:layout_width="0dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_confirm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dialog_btn_cancel"
            style="@style/BtnCancelNormal"
            android:layout_width="0dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>